--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation group: 'org.json', name: 'json', version: '20090211'
 }
 
 tasks.named('test') {
